Add prerequisite checks to prevent NameError when sections run out of order

--- a/08_config_similarity_basics.ipynb
+++ b/08_config_similarity_basics.ipynb
@@ -354,6 +354,16 @@
    "outputs": [],
    "source": [
     "# Compute pairwise similarity matrix using Gower distance\n",
+    "# Check prerequisites\n",
+    "if 'df_sample' not in globals():\n",
+    "    raise NameError(\"df_sample not defined. Please run Section 5 (Sample Data for MVP) first.\")\n",
+    "if 'available_features' not in globals():\n",
+    "    raise NameError(\"available_features not defined. Please run Section 2 (Prepare Config Features) first.\")\n",
+    "if 'numeric_features' not in globals() or 'categorical_features' not in globals() or 'boolean_feature_list' not in globals():\n",
+    "    raise NameError(\"Feature lists not defined. Please run Section 3 (Categorize Features by Type) first.\")\n",
+    "if 'gower_distance' not in globals():\n",
+    "    raise NameError(\"gower_distance function not defined. Please run Section 4 (Implement Gower Distance Function) first.\")\n",
+    "\n",
     "print(\"Computing similarity matrix...\")\n",
     "print(f\"Processing {len(df_sample):,} models...\")\n",
     "\n",
@@ -408,6 +418,14 @@
    "source": [
     "# Build similarity graph\n",
     "# Connect models that are architecturally similar (distance below threshold)\n",
+    "\n",
+    "# Check prerequisites\n",
+    "if 'similarity_matrix' not in globals():\n",
+    "    raise NameError(\"similarity_matrix not defined. Please run Section 6 (Compute Similarity Matrix) first.\")\n",
+    "if 'df_sample' not in globals():\n",
+    "    raise NameError(\"df_sample not defined. Please run Section 5 (Sample Data for MVP) first.\")\n",
+    "if 'n_models' not in globals():\n",
+    "    n_models = len(df_sample)\n",
     "\n",
     "# Use median distance as threshold (or top-k nearest neighbors)\n",
     "distance_threshold = np.median(similarity_matrix[similarity_matrix > 0])\n",
@@ -468,6 +486,12 @@
    "outputs": [],
    "source": [
     "# Visualize similarity graph using network layout\n",
+    "# Check prerequisites\n",
+    "if 'G_similarity' not in globals():\n",
+    "    raise NameError(\"G_similarity not defined. Please run Section 7 (Build Similarity Graph) first.\")\n",
+    "if 'df_sample' not in globals():\n",
+    "    raise NameError(\"df_sample not defined. Please run Section 5 (Sample Data for MVP) first.\")\n",
+    "\n",
     "if len(G_similarity.nodes) > 0:\n",
     "    print(\"Computing graph layout...\")\n",
     "    \n",
@@ -549,6 +573,12 @@
    "outputs": [],
    "source": [
     "# Find nearest neighbors for each model\n",
+    "# Check prerequisites\n",
+    "if 'similarity_matrix' not in globals():\n",
+    "    raise NameError(\"similarity_matrix not defined. Please run Section 6 (Compute Similarity Matrix) first.\")\n",
+    "if 'df_sample' not in globals():\n",
+    "    raise NameError(\"df_sample not defined. Please run Section 5 (Sample Data for MVP) first.\")\n",
+    "\n",
     "print(\"Finding nearest neighbors...\")\n",
     "\n",
     "nearest_neighbors = []\n",
@@ -601,6 +631,14 @@
    "outputs": [],
    "source": [
     "# Compare different similarity metrics on a sample\n",
+    "# Check prerequisites\n",
+    "if 'df_sample' not in globals():\n",
+    "    raise NameError(\"df_sample not defined. Please run Section 5 (Sample Data for MVP) first.\")\n",
+    "if 'numeric_features' not in globals() or 'categorical_features' not in globals() or 'boolean_feature_list' not in globals():\n",
+    "    raise NameError(\"Feature lists not defined. Please run Section 3 (Categorize Features by Type) first.\")\n",
+    "if 'gower_distance' not in globals():\n",
+    "    raise NameError(\"gower_distance function not defined. Please run Section 4 (Implement Gower Distance Function) first.\")\n",
+    "\n",
     "print(\"Comparing similarity metrics...\")\n",
     "\n",
     "# Sample pairs for comparison\n",
@@ -701,6 +739,14 @@
    "outputs": [],
    "source": [
     "# Summary statistics\n",
+    "# Check prerequisites\n",
+    "if 'df_sample' not in globals():\n",
+    "    raise NameError(\"df_sample not defined. Please run Section 5 (Sample Data for MVP) first.\")\n",
+    "if 'similarity_matrix' not in globals():\n",
+    "    raise NameError(\"similarity_matrix not defined. Please run Section 6 (Compute Similarity Matrix) first.\")\n",
+    "if 'G_similarity' not in globals():\n",
+    "    raise NameError(\"G_similarity not defined. Please run Section 7 (Build Similarity Graph) first.\")\n",
+    "\n",
     "print(\"=\"*60)\n",
     "print(\"CONFIG SIMILARITY ANALYSIS SUMMARY\")\n",
     "print(\"=\"*60)\n",
