Improve visualizations: fix head dimension and GQA ratio plots, enhance feature adoption heatmap with side-by-side bar chart

--- a/02_parameter_distributions.ipynb
+++ b/02_parameter_distributions.ipynb
@@ -683,34 +683,72 @@
       "source": [
         "# Convert to numeric\n",
         "head_dim = pd.to_numeric(df['config_head_dimension'], errors='coerce').dropna()\n",
-        "gqa_ratio = pd.to_numeric(df['config_gqa_ratio'], errors='coerce').dropna()\n",
+        "\n",
+        "# Calculate GQA ratio properly: num_heads / num_kv_heads\n",
+        "# Only include cases where GQA is actually used (num_kv_heads < num_heads, so ratio > 1.0)\n",
+        "num_heads = pd.to_numeric(df['config_num_attention_heads'], errors='coerce')\n",
+        "num_kv_heads = pd.to_numeric(df['config_num_key_value_heads'], errors='coerce')\n",
+        "\n",
+        "# Calculate ratio only when both are valid and num_kv_heads > 0\n",
+        "gqa_mask = (num_heads.notna() & num_kv_heads.notna() & (num_kv_heads > 0))\n",
+        "gqa_ratio_calc = num_heads / num_kv_heads\n",
+        "gqa_ratio = gqa_ratio_calc[gqa_mask]\n",
+        "\n",
+        "# Filter to only GQA cases (ratio > 1.0) and reasonable values (ratio <= 32)\n",
+        "gqa_ratio_valid = gqa_ratio[(gqa_ratio > 1.0) & (gqa_ratio <= 32)]\n",
         "\n",
         "fig, axes = plt.subplots(1, 2, figsize=(14, 5))\n",
         "\n",
-        "# Head dimension distribution\n",
-        "dim_counts = head_dim.value_counts().sort_index().head(20)\n",
-        "axes[0].bar(dim_counts.index.astype(int), dim_counts.values, color='coral', alpha=0.8)\n",
+        "# Head dimension distribution - use histogram instead of bar chart for better visualization\n",
+        "# Filter to reasonable range (typically 32-256)\n",
+        "head_dim_filtered = head_dim[(head_dim >= 32) & (head_dim <= 256)]\n",
+        "axes[0].hist(head_dim_filtered, bins=30, color='coral', edgecolor='white', alpha=0.7)\n",
+        "axes[0].axvline(head_dim_filtered.median(), color='red', linestyle='--', linewidth=2, \n",
+        "                label=f'Median: {head_dim_filtered.median():.0f}')\n",
         "axes[0].set_xlabel('Head Dimension (hidden_size / num_heads)')\n",
         "axes[0].set_ylabel('Count')\n",
         "axes[0].set_title('Head Dimension Distribution', fontsize=13)\n",
+        "axes[0].legend()\n",
+        "axes[0].grid(True, alpha=0.3)\n",
         "\n",
-        "# GQA ratio distribution (already converted above)\n",
-        "gqa_counts = gqa_ratio.value_counts().sort_index().head(15)\n",
-        "axes[1].bar(range(len(gqa_counts)), gqa_counts.values, color='seagreen', alpha=0.8)\n",
-        "axes[1].set_xticks(range(len(gqa_counts)))\n",
-        "axes[1].set_xticklabels([f\"{x:.1f}\" for x in gqa_counts.index], rotation=45)\n",
-        "axes[1].set_xlabel('GQA Ratio (num_heads / num_kv_heads)')\n",
-        "axes[1].set_ylabel('Count')\n",
-        "axes[1].set_title('GQA Ratio Distribution', fontsize=13)\n",
+        "# GQA ratio distribution - use histogram with proper binning\n",
+        "if len(gqa_ratio_valid) > 0:\n",
+        "    axes[1].hist(gqa_ratio_valid, bins=30, color='seagreen', edgecolor='white', alpha=0.7)\n",
+        "    axes[1].axvline(gqa_ratio_valid.median(), color='red', linestyle='--', linewidth=2, \n",
+        "                    label=f'Median: {gqa_ratio_valid.median():.2f}')\n",
+        "    axes[1].set_xlabel('GQA Ratio (num_heads / num_kv_heads)')\n",
+        "    axes[1].set_ylabel('Count')\n",
+        "    axes[1].set_title('GQA Ratio Distribution (GQA models only, ratio > 1.0)', fontsize=13)\n",
+        "    axes[1].legend()\n",
+        "    axes[1].grid(True, alpha=0.3)\n",
+        "else:\n",
+        "    axes[1].text(0.5, 0.5, 'No GQA data available', ha='center', va='center', \n",
+        "                 transform=axes[1].transAxes, fontsize=12)\n",
+        "    axes[1].set_title('GQA Ratio Distribution', fontsize=13)\n",
         "\n",
         "plt.tight_layout()\n",
         "plt.savefig('figures/head_dim_gqa.png', dpi=150, bbox_inches='tight')\n",
         "plt.show()\n",
         "\n",
+        "print(\"\\nHead dimension statistics:\")\n",
+        "print(f\"  Min: {head_dim_filtered.min():.0f}\")\n",
+        "print(f\"  Max: {head_dim_filtered.max():.0f}\")\n",
+        "print(f\"  Median: {head_dim_filtered.median():.0f}\")\n",
+        "print(f\"  Mean: {head_dim_filtered.mean():.1f}\")\n",
         "print(\"\\nMost common head dimensions:\")\n",
         "print(head_dim.value_counts().head(10))\n",
-        "print(\"\\nMost common GQA ratios:\")\n",
-        "print(gqa_ratio.value_counts().head(10))"
+        "\n",
+        "if len(gqa_ratio_valid) > 0:\n",
+        "    print(\"\\nGQA ratio statistics:\")\n",
+        "    print(f\"  Models using GQA: {len(gqa_ratio_valid):,}\")\n",
+        "    print(f\"  Min: {gqa_ratio_valid.min():.2f}\")\n",
+        "    print(f\"  Max: {gqa_ratio_valid.max():.2f}\")\n",
+        "    print(f\"  Median: {gqa_ratio_valid.median():.2f}\")\n",
+        "    print(f\"  Mean: {gqa_ratio_valid.mean():.2f}\")\n",
+        "    print(\"\\nMost common GQA ratios:\")\n",
+        "    print(gqa_ratio_valid.round(1).value_counts().head(10))\n",
+        "else:\n",
+        "    print(\"\\nNo GQA data available\")"
       ]
     },
     {
