--- a/03_model_family_comparisons.ipynb
+++ b/03_model_family_comparisons.ipynb
@@ -45,7 +45,7 @@
         }
       ],
       "source": [
-        "df = pd.read_csv('data/model_configs_expanded.csv', low_memory=False)\n",
+        "df = pd.read_csv('../data/model_configs_expanded.csv', low_memory=False)\n",
         "\n",
         "# Convert numeric columns to proper numeric types\n",
         "numeric_cols = [\n",
@@ -252,8 +252,8 @@
         "    # Try local CSV files\n",
         "    import os\n",
         "    alt_paths = [\n",
-        "        'data/ai_ecosystem_expanded.csv',\n",
-        "        'data/ai_ecosystem.csv',\n",
+        "        '../data/ai_ecosystem_expanded.csv',\n",
+        "        '../data/ai_ecosystem.csv',\n",
         "    ]\n",
         "    found = False\n",
         "    for path in alt_paths:\n",
@@ -739,29 +739,62 @@
         "rates_df = pd.DataFrame(adoption_rates).set_index('family')\n",
         "feature_cols = [f.replace('uses_', '') for f in features if f.replace('uses_', '') in rates_df.columns]\n",
         "\n",
-        "from matplotlib.colors import PowerNorm\n",
+        "# Ensure all feature columns exist and fill missing with 0\n",
+        "for col in feature_cols:\n",
+        "    if col not in rates_df.columns:\n",
+        "        rates_df[col] = 0\n",
         "\n",
-        "fig, ax = plt.subplots(figsize=(12, 8))\n",
-        "# Use PowerNorm with gamma < 1 to make gradient more sensitive to lower numbers\n",
-        "# gamma=0.2 stretches lower values even more and ensures high values remain distinct\n",
-        "# Use 'viridis' colormap which has distinct colors at both ends (dark purple for 0, bright yellow for 100)\n",
-        "im = ax.imshow(rates_df[feature_cols].values, cmap='viridis', aspect='auto', \n",
-        "               norm=PowerNorm(gamma=0.2, vmin=0, vmax=100))\n",
-        "ax.set_xticks(range(len(feature_cols)))\n",
-        "ax.set_xticklabels(feature_cols)\n",
-        "ax.set_yticks(range(len(rates_df)))\n",
-        "ax.set_yticklabels(rates_df.index)\n",
+        "# Reorder columns to match feature_cols\n",
+        "rates_df = rates_df[feature_cols]\n",
+        "\n",
+        "fig, axes = plt.subplots(1, 2, figsize=(18, 8))\n",
+        "\n",
+        "# Left: Heatmap with better colormap (RdYlGn - red for low, green for high)\n",
+        "im = axes[0].imshow(rates_df.values, cmap='RdYlGn', aspect='auto', vmin=0, vmax=100)\n",
+        "axes[0].set_xticks(range(len(feature_cols)))\n",
+        "axes[0].set_xticklabels(feature_cols, rotation=45, ha='right')\n",
+        "axes[0].set_yticks(range(len(rates_df)))\n",
+        "axes[0].set_yticklabels(rates_df.index)\n",
         "for i in range(len(rates_df)):\n",
         "    for j in range(len(feature_cols)):\n",
-        "        ax.text(j, i, f'{rates_df.iloc[i, j]:.1f}', ha='center', va='center', fontsize=9)\n",
-        "plt.colorbar(im, ax=ax, label='Adoption Rate (%)')\n",
-        "ax.set_title('Architecture Feature Adoption by Model Family', fontsize=14)\n",
-        "ax.set_ylabel('Model Family')\n",
-        "ax.set_xlabel('Feature')\n",
+        "        value = rates_df.iloc[i, j]\n",
+        "        # Use white text for dark colors, black for light colors\n",
+        "        text_color = 'white' if value < 50 else 'black'\n",
+        "        axes[0].text(j, i, f'{value:.1f}%', ha='center', va='center', \n",
+        "                     fontsize=10, fontweight='bold', color=text_color)\n",
+        "plt.colorbar(im, ax=axes[0], label='Adoption Rate (%)')\n",
+        "axes[0].set_title('Feature Adoption Heatmap', fontsize=14, fontweight='bold')\n",
+        "axes[0].set_ylabel('Model Family', fontsize=12)\n",
+        "axes[0].set_xlabel('Feature', fontsize=12)\n",
+        "\n",
+        "# Right: Stacked bar chart showing adoption rates\n",
+        "x_pos = np.arange(len(rates_df))\n",
+        "width = 0.6\n",
+        "bottom = np.zeros(len(rates_df))\n",
+        "\n",
+        "# Color palette for features\n",
+        "colors = plt.cm.Set3(np.linspace(0, 1, len(feature_cols)))\n",
+        "\n",
+        "for idx, feat in enumerate(feature_cols):\n",
+        "    values = rates_df[feat].values\n",
+        "    axes[1].bar(x_pos, values, width, bottom=bottom, label=feat, color=colors[idx], alpha=0.8)\n",
+        "    bottom += values\n",
+        "\n",
+        "axes[1].set_xlabel('Model Family', fontsize=12)\n",
+        "axes[1].set_ylabel('Adoption Rate (%)', fontsize=12)\n",
+        "axes[1].set_title('Feature Adoption Stacked Bar Chart', fontsize=14, fontweight='bold')\n",
+        "axes[1].set_xticks(x_pos)\n",
+        "axes[1].set_xticklabels(rates_df.index, rotation=45, ha='right')\n",
+        "axes[1].legend(loc='upper left', fontsize=9)\n",
+        "axes[1].set_ylim([0, 100])\n",
+        "axes[1].grid(True, alpha=0.3, axis='y')\n",
         "\n",
         "plt.tight_layout()\n",
         "plt.savefig('figures/feature_adoption_by_family.png', dpi=300, bbox_inches='tight')\n",
-        "plt.show()"
+        "plt.show()\n",
+        "\n",
+        "print(\"\\nFeature adoption rates by family:\")\n",
+        "print(rates_df.round(1))"
       ]
     },
     {
