--- a/03_model_family_comparisons.ipynb
+++ b/03_model_family_comparisons.ipynb
@@ -33,6 +33,125 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# This cell will be populated after data is loaded - see cell below"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Dataset Exploration: Understand the actual data structure\n",
+        "print(\"=\"*80)\n",
+        "print(\"DATASET EXPLORATION\")\n",
+        "print(\"=\"*80)\n",
+        "\n",
+        "# 1. Check the config dataframe\n",
+        "print(\"\\n1. CONFIG DATAFRAME (model_configs_expanded.csv):\")\n",
+        "print(f\"   Shape: {df.shape}\")\n",
+        "print(f\"   Columns ({len(df.columns)}): {list(df.columns[:20])}...\")\n",
+        "print(f\"   Total columns: {len(df.columns)}\")\n",
+        "\n",
+        "# Check for date-related columns in config\n",
+        "date_cols = [c for c in df.columns if 'date' in c.lower() or 'time' in c.lower() or 'created' in c.lower()]\n",
+        "print(f\"\\n   Date-related columns in config: {date_cols}\")\n",
+        "\n",
+        "# Show sample of config data\n",
+        "print(f\"\\n   Sample config values:\")\n",
+        "sample_cols = ['modelId', 'config_model_type', 'config_hidden_size', 'config_num_hidden_layers']\n",
+        "for col in sample_cols:\n",
+        "    if col in df.columns:\n",
+        "        print(f\"      {col}: {df[col].head(3).tolist()}\")\n",
+        "\n",
+        "# 2. Try to load from HuggingFace dataset\n",
+        "print(\"\\n2. HUGGINGFACE DATASET (modelbiome/ai_ecosystem):\")\n",
+        "try:\n",
+        "    from datasets import load_dataset\n",
+        "    dataset = load_dataset(\"modelbiome/ai_ecosystem\", split=\"train\")\n",
+        "    print(f\"   ✓ Dataset loaded: {len(dataset):,} models\")\n",
+        "    print(f\"   ✓ Available columns ({len(dataset.column_names)}):\")\n",
+        "    for i, col in enumerate(dataset.column_names, 1):\n",
+        "        print(f\"      {i:2d}. {col}\")\n",
+        "    \n",
+        "    # Check for date columns\n",
+        "    date_cols_hf = [c for c in dataset.column_names if 'date' in c.lower() or 'time' in c.lower() or 'created' in c.lower()]\n",
+        "    print(f\"\\n   Date-related columns in HF dataset: {date_cols_hf}\")\n",
+        "    \n",
+        "    # Sample a few rows to see data structure\n",
+        "    print(f\"\\n   Sample data from first model:\")\n",
+        "    sample_idx = 0\n",
+        "    for col in dataset.column_names[:15]:  # First 15 columns\n",
+        "        val = dataset[sample_idx][col]\n",
+        "        if isinstance(val, (list, dict)):\n",
+        "            val_str = f\"{type(val).__name__} (len={len(val)})\"\n",
+        "        elif isinstance(val, str) and len(str(val)) > 50:\n",
+        "            val_str = str(val)[:50] + \"...\"\n",
+        "        else:\n",
+        "            val_str = str(val)\n",
+        "        print(f\"      {col}: {val_str}\")\n",
+        "    \n",
+        "    # Check specific columns we care about\n",
+        "    print(f\"\\n   Checking key columns:\")\n",
+        "    key_cols = ['model_id', 'createdAt', 'created_at', 'downloads', 'likes', 'pipeline_tag']\n",
+        "    for col in key_cols:\n",
+        "        if col in dataset.column_names:\n",
+        "            sample_vals = [dataset[i][col] for i in range(min(3, len(dataset)))]\n",
+        "            non_null = sum(1 for v in sample_vals if v is not None and (not isinstance(v, str) or v.strip() != ''))\n",
+        "            print(f\"      ✓ {col}: exists, sample values: {sample_vals[:3]}, non-null in sample: {non_null}/3\")\n",
+        "        else:\n",
+        "            print(f\"      ✗ {col}: NOT FOUND\")\n",
+        "    \n",
+        "except ImportError:\n",
+        "    print(\"   ✗ 'datasets' library not available\")\n",
+        "except Exception as e:\n",
+        "    print(f\"   ✗ Error loading dataset: {e}\")\n",
+        "    import traceback\n",
+        "    traceback.print_exc()\n",
+        "\n",
+        "# 3. Check local CSV files\n",
+        "print(\"\\n3. LOCAL CSV FILES:\")\n",
+        "import os\n",
+        "alt_paths = [\n",
+        "    '../data/ai_ecosystem_expanded.csv',\n",
+        "    '../data/ai_ecosystem.csv',\n",
+        "    '../data/model_configs_expanded.csv'\n",
+        "]\n",
+        "for path in alt_paths:\n",
+        "    if os.path.exists(path):\n",
+        "        print(f\"   ✓ Found: {path}\")\n",
+        "        try:\n",
+        "            df_test = pd.read_csv(path, low_memory=False, nrows=5)\n",
+        "            print(f\"      Shape (sample): {df_test.shape}\")\n",
+        "            print(f\"      Columns: {list(df_test.columns[:15])}...\")\n",
+        "            date_cols_local = [c for c in df_test.columns if 'date' in c.lower() or 'time' in c.lower() or 'created' in c.lower()]\n",
+        "            if date_cols_local:\n",
+        "                print(f\"      Date columns: {date_cols_local}\")\n",
+        "                for dc in date_cols_local[:3]:\n",
+        "                    print(f\"         {dc} sample: {df_test[dc].head(3).tolist()}\")\n",
+        "        except Exception as e:\n",
+        "            print(f\"      Error reading: {e}\")\n",
+        "    else:\n",
+        "        print(f\"   ✗ Not found: {path}\")\n",
+        "\n",
+        "# 4. Summary of what we have\n",
+        "print(\"\\n\" + \"=\"*80)\n",
+        "print(\"SUMMARY\")\n",
+        "print(\"=\"*80)\n",
+        "print(f\"Config dataframe: {len(df):,} rows, {len(df.columns)} columns\")\n",
+        "print(f\"Config columns starting with 'config_': {len([c for c in df.columns if c.startswith('config_')])}\")\n",
+        "print(f\"Family column exists: {'family' in df.columns}\")\n",
+        "if 'family' in df.columns:\n",
+        "    print(f\"   Unique families: {df['family'].nunique()}\")\n",
+        "    print(f\"   Family distribution:\\n{df['family'].value_counts().head(10)}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 18,
       "metadata": {},
       "outputs": [
@@ -147,10 +266,10 @@
         }
       ],
       "source": [
-        "# Filter to families with sufficient samples\n",
+        "# Use all families (no filtering)\n",
         "family_counts = df['family'].value_counts()\n",
-        "main_families = family_counts[family_counts > 50].index.tolist()\n",
-        "df_main = df[df['family'].isin(main_families)].copy()\n",
+        "main_families = family_counts.index.tolist()\n",
+        "df_main = df.copy()\n",
         "\n",
         "fig, axes = plt.subplots(1, 2, figsize=(16, 6))\n",
         "\n",
@@ -274,10 +393,10 @@
         "# Merge temporal data with main dataframe\n",
         "# Check if df_main exists, if not create it from df\n",
         "if 'df_main' not in locals():\n",
-        "    # Create df_main if it doesn't exist (filter to main families)\n",
+        "    # Create df_main if it doesn't exist (use all families)\n",
         "    family_counts = df['family'].value_counts()\n",
-        "    main_families = family_counts[family_counts > 50].index.tolist()\n",
-        "    df_main = df[df['family'].isin(main_families)].copy()\n",
+        "    main_families = family_counts.index.tolist()\n",
+        "    df_main = df.copy()\n",
         "\n",
         "# Merge temporal data\n",
         "if 'createdAt' in df_main.columns:\n",
@@ -290,28 +409,73 @@
         "    # If createdAt doesn't exist, just merge it in\n",
         "    df_main = df_main.merge(df_temporal[['modelId', 'createdAt']], on='modelId', how='left')\n",
         "\n",
-        "# Parse dates\n",
+        "# Parse dates with improved error handling\n",
         "def parse_date(date_str):\n",
-        "    if pd.isna(date_str) or date_str is None:\n",
+        "    if pd.isna(date_str) or date_str is None or date_str == '':\n",
         "        return None\n",
-        "    if isinstance(date_str, str):\n",
+        "    if isinstance(date_str, (int, float)):\n",
+        "        # Handle timestamp (seconds or milliseconds)\n",
         "        try:\n",
-        "            return pd.to_datetime(date_str)\n",
+        "            if date_str > 1e12:  # Likely milliseconds\n",
+        "                return pd.to_datetime(date_str, unit='ms')\n",
+        "            else:  # Likely seconds\n",
+        "                return pd.to_datetime(date_str, unit='s')\n",
         "        except:\n",
         "            return None\n",
-        "    return date_str\n",
+        "    if isinstance(date_str, str):\n",
+        "        # Try multiple date formats\n",
+        "        date_formats = [\n",
+        "            '%Y-%m-%dT%H:%M:%S',\n",
+        "            '%Y-%m-%dT%H:%M:%S.%f',\n",
+        "            '%Y-%m-%dT%H:%M:%SZ',\n",
+        "            '%Y-%m-%dT%H:%M:%S.%fZ',\n",
+        "            '%Y-%m-%d %H:%M:%S',\n",
+        "            '%Y-%m-%d',\n",
+        "            '%m/%d/%Y',\n",
+        "            '%d/%m/%Y'\n",
+        "        ]\n",
+        "        for fmt in date_formats:\n",
+        "            try:\n",
+        "                return pd.to_datetime(date_str, format=fmt)\n",
+        "            except:\n",
+        "                continue\n",
+        "        # Try pandas automatic parsing as fallback\n",
+        "        try:\n",
+        "            return pd.to_datetime(date_str, infer_datetime_format=True)\n",
+        "        except:\n",
+        "            return None\n",
+        "    # If it's already a datetime object\n",
+        "    if isinstance(date_str, pd.Timestamp):\n",
+        "        return date_str\n",
+        "    return None\n",
+        "\n",
+        "# Check what we have before parsing\n",
+        "print(f\"\\nChecking createdAt column:\")\n",
+        "print(f\"  Total rows: {len(df_main):,}\")\n",
+        "if 'createdAt' in df_main.columns:\n",
+        "    print(f\"  Non-null createdAt values: {df_main['createdAt'].notna().sum():,}\")\n",
+        "    print(f\"  Sample values: {df_main['createdAt'].dropna().head(5).tolist()}\")\n",
+        "    print(f\"  Data types: {df_main['createdAt'].dtype}\")\n",
+        "else:\n",
+        "    print(\"  Warning: createdAt column not found in df_main\")\n",
         "\n",
         "df_main['created_date'] = df_main['createdAt'].apply(parse_date)\n",
         "\n",
         "# Only proceed if we have valid dates\n",
-        "if df_main['created_date'].notna().sum() > 0:\n",
+        "valid_dates_count = df_main['created_date'].notna().sum()\n",
+        "print(f\"\\nParsed dates:\")\n",
+        "print(f\"  Valid dates: {valid_dates_count:,}\")\n",
+        "print(f\"  Invalid/missing: {(len(df_main) - valid_dates_count):,}\")\n",
+        "\n",
+        "if valid_dates_count > 0:\n",
         "    df_main['year_month'] = df_main['created_date'].dt.to_period('M')\n",
         "    df_dated = df_main[df_main['created_date'].notna()].copy()\n",
         "    print(f\"\\nModels with valid dates: {len(df_dated):,}\")\n",
         "    print(f\"Date range: {df_dated['created_date'].min()} to {df_dated['created_date'].max()}\")\n",
         "else:\n",
         "    df_dated = pd.DataFrame()\n",
-        "    print(\"\\nNo valid dates available - temporal analysis will be skipped\")"
+        "    print(\"\\n⚠️  No valid dates available - temporal analysis will be skipped\")\n",
+        "    print(\"   This is expected if the dataset doesn't include createdAt timestamps.\")"
       ]
     },
     {
@@ -739,62 +903,29 @@
         "rates_df = pd.DataFrame(adoption_rates).set_index('family')\n",
         "feature_cols = [f.replace('uses_', '') for f in features if f.replace('uses_', '') in rates_df.columns]\n",
         "\n",
-        "# Ensure all feature columns exist and fill missing with 0\n",
-        "for col in feature_cols:\n",
-        "    if col not in rates_df.columns:\n",
-        "        rates_df[col] = 0\n",
+        "from matplotlib.colors import PowerNorm\n",
         "\n",
-        "# Reorder columns to match feature_cols\n",
-        "rates_df = rates_df[feature_cols]\n",
-        "\n",
-        "fig, axes = plt.subplots(1, 2, figsize=(18, 8))\n",
-        "\n",
-        "# Left: Heatmap with better colormap (RdYlGn - red for low, green for high)\n",
-        "im = axes[0].imshow(rates_df.values, cmap='RdYlGn', aspect='auto', vmin=0, vmax=100)\n",
-        "axes[0].set_xticks(range(len(feature_cols)))\n",
-        "axes[0].set_xticklabels(feature_cols, rotation=45, ha='right')\n",
-        "axes[0].set_yticks(range(len(rates_df)))\n",
-        "axes[0].set_yticklabels(rates_df.index)\n",
+        "fig, ax = plt.subplots(figsize=(12, 8))\n",
+        "# Use PowerNorm with gamma < 1 to make gradient more sensitive to lower numbers\n",
+        "# gamma=0.2 stretches lower values even more and ensures high values remain distinct\n",
+        "# Use 'viridis' colormap which has distinct colors at both ends (dark purple for 0, bright yellow for 100)\n",
+        "im = ax.imshow(rates_df[feature_cols].values, cmap='viridis', aspect='auto', \n",
+        "               norm=PowerNorm(gamma=0.2, vmin=0, vmax=100))\n",
+        "ax.set_xticks(range(len(feature_cols)))\n",
+        "ax.set_xticklabels(feature_cols)\n",
+        "ax.set_yticks(range(len(rates_df)))\n",
+        "ax.set_yticklabels(rates_df.index)\n",
         "for i in range(len(rates_df)):\n",
         "    for j in range(len(feature_cols)):\n",
-        "        value = rates_df.iloc[i, j]\n",
-        "        # Use white text for dark colors, black for light colors\n",
-        "        text_color = 'white' if value < 50 else 'black'\n",
-        "        axes[0].text(j, i, f'{value:.1f}%', ha='center', va='center', \n",
-        "                     fontsize=10, fontweight='bold', color=text_color)\n",
-        "plt.colorbar(im, ax=axes[0], label='Adoption Rate (%)')\n",
-        "axes[0].set_title('Feature Adoption Heatmap', fontsize=14, fontweight='bold')\n",
-        "axes[0].set_ylabel('Model Family', fontsize=12)\n",
-        "axes[0].set_xlabel('Feature', fontsize=12)\n",
-        "\n",
-        "# Right: Stacked bar chart showing adoption rates\n",
-        "x_pos = np.arange(len(rates_df))\n",
-        "width = 0.6\n",
-        "bottom = np.zeros(len(rates_df))\n",
-        "\n",
-        "# Color palette for features\n",
-        "colors = plt.cm.Set3(np.linspace(0, 1, len(feature_cols)))\n",
-        "\n",
-        "for idx, feat in enumerate(feature_cols):\n",
-        "    values = rates_df[feat].values\n",
-        "    axes[1].bar(x_pos, values, width, bottom=bottom, label=feat, color=colors[idx], alpha=0.8)\n",
-        "    bottom += values\n",
-        "\n",
-        "axes[1].set_xlabel('Model Family', fontsize=12)\n",
-        "axes[1].set_ylabel('Adoption Rate (%)', fontsize=12)\n",
-        "axes[1].set_title('Feature Adoption Stacked Bar Chart', fontsize=14, fontweight='bold')\n",
-        "axes[1].set_xticks(x_pos)\n",
-        "axes[1].set_xticklabels(rates_df.index, rotation=45, ha='right')\n",
-        "axes[1].legend(loc='upper left', fontsize=9)\n",
-        "axes[1].set_ylim([0, 100])\n",
-        "axes[1].grid(True, alpha=0.3, axis='y')\n",
+        "        ax.text(j, i, f'{rates_df.iloc[i, j]:.1f}', ha='center', va='center', fontsize=9)\n",
+        "plt.colorbar(im, ax=ax, label='Adoption Rate (%)')\n",
+        "ax.set_title('Architecture Feature Adoption by Model Family', fontsize=14)\n",
+        "ax.set_ylabel('Model Family')\n",
+        "ax.set_xlabel('Feature')\n",
         "\n",
         "plt.tight_layout()\n",
         "plt.savefig('figures/feature_adoption_by_family.png', dpi=300, bbox_inches='tight')\n",
-        "plt.show()\n",
-        "\n",
-        "print(\"\\nFeature adoption rates by family:\")\n",
-        "print(rates_df.round(1))"
+        "plt.show()"
       ]
     },
     {
@@ -821,6 +952,14 @@
         }
       ],
       "source": [
+        "# Ensure imports are available\n",
+        "try:\n",
+        "    plt\n",
+        "except NameError:\n",
+        "    import matplotlib.pyplot as plt\n",
+        "    import numpy as np\n",
+        "    import pandas as pd\n",
+        "\n",
         "fig, ax = plt.subplots(figsize=(14, 6))\n",
         "\n",
         "# Use log scale for context length\n",
@@ -1147,13 +1286,13 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python (research_env)",
       "language": "python",
-      "name": "python3"
+      "name": "research_env"
     },
     "language_info": {
       "name": "python",
-      "version": "3.9.0"
+      "version": "3.13.7"
     }
   },
   "nbformat": 4,
